<resources>
    <string name="app_name">ShinHanBank</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="SelectLogin">로그인 방식을 선택하세요</string>
    <string name="idPw">ID / PW</string>
    <string name="id">아이디</string>
    <string name="doubleCheck">중복확인</string>
    <string name="pw">비밀번호</string>
    <string name="phoneNumber">전화번호</string>
    <string name="Resident">주민등록번호</string>
    <string name="name">이름</string>
    <string name="NickName">닉네임</string>
    <string name="profile">프로필 사진 등록</string>
    <string name="SelectPicture">사진선택</string>
    <string name="Terms">약관동의</string>
    <string name="cancel">취소</string>
    <string name="typingAuthNum">간편인증번호를 입력하세요</string>
    <string name="SignUp">가입</string>
    <string name="hyphen">-</string>
</resources>